# benchmarking-analysis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-pr.yaml  build-push.yaml  cleanup-cloudflare.yaml  prod-cloudflare.yaml  stage-cloudflare.yaml
data/: 2026-04-pricing.json  md_benchmark_aws_data.parquet  rbfe_benchmark_aws_data.parquet  ross_dodecahedron_jacs.json
scripts/: export_parquet.py  generate_ondemand_price.py
src/benchmarking_analysis/: analysis.py  generate_ondemand_price.py
src/benchmarking_analysis/__marimo__/session/: analysis.py.json
