[project]
authors = [{name = "Ethan Holz", email = "ethan.holz@omsf.io"}]
dependencies = []
name = "benchmarking-analysis"
requires-python = ">= 3.13"
version = "0.1.0"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
benchmarking_analysis = { path = ".", editable = true }

[tool.pixi.dependencies]
duckdb = ">=1.0.0"
altair = ">=5.4.0"
pyarrow = ">=23.0.1,<24"
polars = ">=1.9.0"
openai = ">=1.55.3"
ruff = ">=0.15.8,<0.16"
nbformat = ">=5.7.0"
vegafusion = ">=2.0.0"
vl-convert-python = ">=1.0.0"
marimo = ">=0.23.1"
sqlglot = ">=23.4"
uv = ">=0.11.7,<0.12"

[tool.pixi.tasks]
clean = "rm -rf output public"
build = "pixi run marimo export html-wasm --mode run --sandbox -o output src/benchmarking_analysis/analysis.py"
